--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "custom-components-react-tailwind",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
+    "start": "vite",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
